[package]
name = "bibliophile"
version = "0.1.0"
authors = ["krispylahe"]
edition = "2021"

[package.metadata.skyline]
titleid = "0100a6301214e000" # Fire Emblem Engage

[lib]
crate-type = ["cdylib"]

[dependencies]
engage = { git = "https://github.com/DivineDragonFanClub/engage.git", version = "0.10.0" }
skyline = { git = "https://github.com/Raytwo/skyline-rs", branch = "preview" }
unity = { git = "https://github.com/DivineDragonFanClub/unity.git", version = "0.3.0" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true